# fulfil-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/fulfil_cli/: __init__.py  __main__.py
src/fulfil_cli/auth/: __init__.py  api_key.py  keyring_store.py  oauth.py
src/fulfil_cli/cli/: __init__.py  app.py  state.py
src/fulfil_cli/cli/commands/: api.py  auth.py  common.py  completion.py  config.py  model.py  report.py
src/fulfil_cli/client/: __init__.py  errors.py  http.py
src/fulfil_cli/config/: __init__.py  manager.py  paths.py
src/fulfil_cli/output/: __init__.py  describe.py  formatter.py  json_output.py  report.py  table.py
tests/: conftest.py  test_config.py
tests/test_auth/: test_api_key.py
tests/test_cli/: test_api_command.py  test_app.py  test_app_commands.py  test_auth_commands.py  test_config_commands.py  test_model_commands.py  test_report_commands.py  test_state.py
tests/test_client/: test_errors.py  test_http.py
tests/test_output/: test_formatter.py  test_report.py  test_table.py
