[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "fulfil-cli"
version = "0.1.0"
description = "The Fulfil CLI — primary interface for humans and AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Fulfil.IO", email = "hello@fulfil.io" }]
keywords = ["fulfil", "cli", "erp", "ecommerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "keyring>=25.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
fulfil = "fulfil_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.uv.build-backend]
module-name = "fulfil_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
